Thu Mar  8 19:25:15 UTC 2012  Brian Johnson  <johnsonb@ociweb.com>

        * bin/PerlDDS/Run_Test.pm:

          Corrected value returned for process when max processes are reached.

        * tools/scripts/lcov.pl:

          Cleanup.

Thu Mar  8 16:47:13 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/transport/framework/TransportCustomizedElement.h:
        * dds/DCPS/transport/framework/TransportCustomizedElement.cpp:
        * dds/DCPS/transport/framework/TransportQueueElement.h:
        * dds/DCPS/transport/framework/TransportSendElement.h:
        * dds/DCPS/transport/framework/TransportSendElement.inl:
        * dds/DCPS/transport/framework/TransportSendElement.cpp:

          Provide a subscription_id() accessor for Queue Elements.
          This is only used when sending to a particular single subscription.
          DataWriterImpl uses that feature to implement durability.

        * dds/DCPS/transport/rtps_udp/RtpsUdpDataLink.h:
        * dds/DCPS/transport/rtps_udp/RtpsUdpDataLink.cpp:
        * dds/DCPS/transport/rtps_udp/RtpsUdpSendStrategy.cpp:

          If sending to a (single) subscription, only use that one locator.

        * NEWS:

          Updated info for upcoming release.

Thu Mar  8 16:49:28 UTC 2012  Brian Johnson  <johnsonb@ociweb.com>

        * tools/scripts/lcov.pl:

          Added flag to indicate staging area for coverage.

Thu Mar  8 16:01:32 UTC 2012  Brian Johnson  <johnsonb@ociweb.com>

        * bin/PerlDDS/Run_Test.pm:

          Reducing the number of Coverage processes.

Thu Mar  8 15:39:18 UTC 2012  Brian Johnson  <johnsonb@ociweb.com>

        * bin/PerlDDS/Process.pm:
        * bin/PerlDDS/ProcessFactory.pm:
        * bin/PerlDDS/Run_Test.pm:

          Changing Coverage to try to capture all coverage during one test
          run and ensure that all executables contribute to coverage.

Wed Mar  7 21:19:15 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/RTPS/Sedp.cpp: